# Swarm-Visualization

./: .gitignore  README.md  calculation_utils.py  create_examples.sh  nn.py  plotting_utils.py  pyproject.toml  run_test.py  textfile_utils.py
.github/workflows/: ruff.yml  unittest.yml
examples/: boxplot_examples.py  histogram_examples.py  legend_examples.py  lineplot_examples.py  scatterplot_examples.py  violinplot_examples.py
plotting_utils/: __init__.py  boxplot_utils.py  general_utils.py  gridplot_utils.py  histogram_utils.py  jointplot_utils.py  legendplot_utils.py  lineplot_utils.py  scatterplot_utils.py  set_plot_properties.py  violinplot_utils.py
swarm_visualizer/: __init__.py  barplot.py  boxplot.py  gridplot.py  histogram.py  lineplot.py  scatterplot.py  violinplot.py
swarm_visualizer/processing/: __init__.py  grouping.py  sorting.py
swarm_visualizer/utility/: __init__.py  calculation_utils.py  general_utils.py  legendplot_utils.py  statistics_utils.py  textfile_utils.py
tests/: test_barplot.py  test_boxplot.py  test_colorbar.py  test_histogram.py  test_legend.py  test_lineplot.py  test_p_value.py  test_scatterplot.py  test_violinplot.py
tests/processing/: test_grouping.py  test_sorting.py
